--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
+   <!-- Global stylesheet can be imported here. -->
     <title>GitHub Finder</title>
   </head>
   <body>
